# dotsavvy

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml
data/: README.md  architecture.drawio
data/ictresearchmethods/scripts/: download_raw_data.py  process_raw_data.py  split_embed_processed_data.py  split_embed_upsert.py  upsert_processed_data.py
data/pdfs/scripts/: split_embed_raw_data.py  upsert_processed_data.py
dotsavvy/: sample.env
dotsavvy/agents/: conversation.py
dotsavvy/datastore/pinecone/: index.py  types.py
dotsavvy/langchain/: prompts.py  tools.py
dotsavvy/scripts/: create_pinecone_index.py
dotsavvy/scripts/data_download/: paper_dois.txt
dotsavvy/scripts/pinecone/: create_pinecone_index.py  delete_pineconde_index.py
dotsavvy/services/: chunk.py  embedding.py  vectorstore.py
dotsavvy/utils/: env_variables.py
experiments/experiment_01/: 01-retrieval-agent.ipynb  01a-retrieval-agent.html  01a-retrieval-agent.ipynb  02b-retrieval-agent.html  02b-retrieval-agent.ipynb  02c-langchain_visualizer.html  02c-langchain_visualizer.ipynb
experiments/experiment_02_paperqa/: 01a_hello_world.ipynb  01b_dunno_yet.ipynb
experiments/experiment_03_plan_and_execute/: 01a_hello_world.ipynb  01b_idk.ipynb
experiments/experiment_xx_generative/: 02a_experiment_flare.ipynb  02b_experiment_duckdb.ipynb
