[tool.poetry]
name = "dotsavvy"
version = "0.1.0"
description = "The DOTsavvy research tool offers ICT students insights into the crucial Development Oriented Triangulation (DOT) framework in the ICT field."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pywikibot = "^8.1.0"
langchain = "^0.0.165"
pinecone-client = "^2.2.1"
jupyter = "^1.0.0"
rich = "^13.3.5"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
