[tool.poetry]
name = "dotsavvy"
version = "0.1.0"
description = "The DOTsavvy research tool offers ICT students insights into the crucial Development Oriented Triangulation (DOT) framework in the ICT field."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pywikibot = "^8.1.0"
langchain = "^0.0.189"
pinecone-client = {extras = ["grpc"], version = "^2.2.1"}
jupyter = "^1.0.0"
rich = "^13.3.5"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
openai = "^0.27.6"
pypdf = "^3.9.0"
langchain-visualizer = "^0.0.22"
paper-qa = "^2.0.3"
pyzotero = "^1.5.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
